--- a/accounting-ui/build.properties
+++ b/accounting-ui/build.properties
@@ -5,5 +5,6 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                splash.bmp,\
-               OSGI-INF/l10n/bundle.properties
+               OSGI-INF/l10n/bundle.properties,\
+               OSGI-INF/
                
