--- a/accounting-ui/plugin.xml
+++ b/accounting-ui/plugin.xml
@@ -133,7 +133,7 @@
             <command
                   commandId="de.togginho.accounting.ui.revenue.OpenRevenueCommand"
                   icon="icons/money_add.png"
-                  label="Revenue"
+                  label="%command.revenue.name"
                   style="push">
             </command>
          </menu>
@@ -189,7 +189,7 @@
             <command
                   commandId="de.togginho.accounting.ui.revenue.OpenRevenueCommand"
                   icon="icons/money_add.png"
-                  label="Revenue"
+                  label="%command.revenue.name"
                   style="push">
             </command>
          </toolbar>
@@ -199,24 +199,14 @@
          <toolbar
                id="accounting-ui-rcp.toolbar2">
             <command
-                  commandId="org.eclipse.ui.newWizard"
+                  commandId="de.togginho.accounting.ui.invoice.NewInvoiceCommand"
                   icon="icons/page_add.png"
-                  label="%menu.file.new.invoice.label"
                   style="push">
-               <parameter
-                     name="newWizardId"
-                     value="de.togginho.accounting.ui.wizard.NewInvoiceWizard">
-               </parameter>
             </command>
             <command
-                  commandId="org.eclipse.ui.newWizard"
+                  commandId="de.togginho.accounting.ui.client.NewClientCommand"
                   icon="icons/group_add.png"
-                  label="%menu.file.new.client.label"
                   style="push">
-               <parameter
-                     name="newWizardId"
-                     value="de.togginho.accounting.ui.wizard.NewClientWizard">
-               </parameter>
             </command>
          </toolbar>
       </menuContribution>
@@ -448,14 +438,20 @@
             name="%command.invoice.cancel.name">
       </command>
       <command
+            categoryId="de.togginho.accounting.ui.invoice"
             defaultHandler="de.togginho.accounting.ui.invoice.ChangeInvoicesFilterCommand"
             id="de.togginho.accounting.ui.invoice.ChangeInvoicesFilterCommand"
             name="%command.change.invoice.filter">
       </command>
+      <category
+            id="de.togginho.accounting.ui.revenue"
+            name="%commandCategory.revenue.name">
+      </category>
       <command
+            categoryId="de.togginho.accounting.ui.revenue"
             defaultHandler="de.togginho.accounting.ui.revenue.OpenRevenueHandler"
             id="de.togginho.accounting.ui.revenue.OpenRevenueCommand"
-            name="Revenue">
+            name="%command.revenue.name">
       </command>
    </extension>
    <extension
